# stock-agent

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  REFACTORING.md  TDD.md  docker-compose.yml  init-db.sql  jira-import.csv  jira_import.py  personal-trading-system-architecture.md
StockAgent/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
StockAgent/backend/src/: __init__.py  config.py  database.py  main.py
StockAgent/backend/src/api/: account.py  reports.py  scanner.py  strategy.py  trades.py  ws.py
StockAgent/backend/src/core/: learning.py  market_data.py  news_client.py  news_subscriber.py  order_executor.py  report.py  risk.py  scanner.py  strategy.py  trader.py  tuner.py
StockAgent/backend/src/kiwoom_client/: account.py  auth.py  market.py  order.py
StockAgent/backend/src/models/: __init__.py  db_models.py  schemas.py
StockAgent/backend/tests/: conftest.py  test_setup.py
StockAgent/backend/tests/integration/: test_api_account.py  test_api_health.py
StockNews/backend/: .dockerignore  .env.example  Dockerfile  IMPLEMENTATION_SUMMARY_CROSS_MARKET.md  pyproject.toml  ruff.toml  test_sentiment_models.py  test_theme_models.py
StockNews/backend/alembic/: env.py
StockNews/backend/alembic/versions/: 9f69148009e7_add_prediction_verification_tables.py  a1b2c3d4e5f6_add_training_data_pipeline.py  a3508d2fd73d_initial_schema.py  b2c3d4e5f6g7_add_tier1_ml_columns.py  c3d4e5f6g7h8_add_ml_model_table.py  d4e5f6g7h8i9_add_tier2_columns.py  e5f6g7h8i9j0_add_tier3_columns.py
StockNews/backend/app/: main.py
StockNews/backend/app/advan/: __init__.py  api.py  evaluator.py  event_extractor.py  event_retriever.py  feature_store.py  guardrails.py  llm_forecaster.py  models.py  optimizer.py  policy.py  schemas.py  simulator.py
StockNews/backend/app/api/: collect.py  health.py  metrics.py  news.py  prediction.py  prediction_context.py  router.py  scheduler.py  stocks.py  summary.py  themes.py  training.py  verification.py  versions.py  websocket.py
StockNews/backend/app/collectors/: dart.py  finnhub.py  market_indicator_collector.py  naver.py  newsapi.py  pipeline.py  price_collector.py  quality_tracker.py  rss.py  scheduler.py  stock_selector.py  verification_scheduler.py  yfinance_middleware.py
StockNews/backend/app/core/: auth.py  config.py  database.py  limiter.py  llm.py  logger.py  logging.py  middleware.py  monitoring.py  pubsub.py  redis.py  scope_loader.py  scope_writer.py  secrets.py  versioning.py
StockNews/backend/data/: prediction_context.json
StockNews/backend/scripts/: historical_backfill.py
StockNews/backend/tests/: conftest.py  factories.py
(+429 files in other folders)
