[project]
name = "stocknews-backend"
version = "0.1.0"
description = "StockNews - News Intelligence Service Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.4",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "openai>=1.10.0",
    "boto3>=1.34.0",
    "scikit-learn>=1.3.0",
    "slowapi>=0.1.9",
    "yfinance>=1.2.0",
    "pandas>=2.0.0",
    "joblib>=1.3.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "factory-boy>=3.3.0",
    "fakeredis>=2.21.0",
    "respx>=0.20.0",
    "ruff>=0.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: 단위 테스트",
    "integration: 통합 테스트",
    "slow: 느린 테스트 (외부 API)",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
